2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/RemoteControl.cs: Simplify and uncomment MarkTaskAsCompleteById. 
	Complete task immediately, without timeout or other fancy GUI stuff. 
	Fixes bug #555028.  Many thanks to Alex Launi for expanding our DBus
	interface.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* osx/Contents/Info.plist: Bump version to 0.1.8.  Fixes bug #556549.

2008-12-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Rtm/RtmBackend.cs: Only make one call to ListsGetList
	during RefreshThreadLoop.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* RtmNet/Rtm.cs: Update REST URL base. Beginning of fix for bug #562026.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Rtm/RtmPreferencesWidget.cs: Add a white EventBox to
	contain the RTM logo. Kind of ugly, but I'm willing to say we've
	fixed bug #532766.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Application.cs: Enable translator-credits string for About dialog.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Makefile.am:
	* Makefile.include:
	* RtmNet/Makefile.am: Don't hardcode gmcs; use $(GMCS) instead. Fixes
	bug #562845, patch courtesy of James Westby.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskTreeView.cs: Have FilterFunc return false when the given task
	is null. Fixes crash reported in bug #526662.

	* src/Backends/Sqlite/SqliteBackend.cs: Don't try to close a null
	database.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Rtm/RtmPreferencesWidget.cs: Handle exceptions when
	trying to get an authorization URL for RTM. Fixes bug #563932.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Sqlite/SqliteBackend.cs: Implement task deletion. Fixes
	bug #551717, patch courtesy of Andreia Gaita and Stefan Schlott.

2008-12-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>
